--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="./styles.css">
-    <title>Rock Paper Scissors</title>
+    <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Rock Paper Scissors</h1>
     <div class="container">
-        <button onclick="game('rock')">&#129704;</button>
-        <button onclick="game('paper')">&#9995;</button>
-        <button onclick="game('scissors')">&#9986;</button>
+        <h1>Rock, Paper, Scissors</h1>
+        <div class="score-board">
+            <div id="player-score">Player: 0</div>
+            <div id="computer-score">Computer: 0</div>
+        </div>
+        <div class="buttons">
+            <button id="rock" onclick="playRound('rock')">Rock</button>
+            <button id="paper" onclick="playRound('paper')">Paper</button>
+            <button id="scissors" onclick="playRound('scissors')">Scissors</button>
+        </div>
+        <div id="result"></div>
+        <button id="restart" onclick="restartGame()" style="display:none">Restart</button>
     </div>
-    <div class="result"></div>
+    <script src="script.js"></script>
 </body>
 </html>
